Table auth [headercolor: #00FFFF] {
  _id uuid [pk, default: `gen_random_uuid()`] // Llave primaria generada automáticamente
  email varchar [unique, not null] // Email del usuario
  password varchar [not null] // Contraseña del usuario
  username varchar [unique] // Nombre de usuario, opcional
  created_at timestamp [not null] // Fecha de creación
  updated_at timestamp [not null] // Fecha de actualización
  last_session timestamp // Última sesión del usuario
  status AuthStatus_Enum [not null, default: 'PENDING'] // Estado de autenticación del usuario
  role User_Role_Enum [not null, default: 'ARTIST_ROLE'] // Rol del usuario
  user varchar [unique, not null] // Referencia única al usuario

  Note: 'Tabla de autenticación de usuarios.'
}

Enum AuthStatus_Enum {
  NONE
  VERIFIED
  NOT
  BLOCKED
  DELETED
  SUSPENDED
  PENDING
  ACTIVE
  INACTIVE
}

Enum User_Role_Enum {
  ARTIST_ROLE
  CONTRATIST_ROLE
  ADMIN_ROLE
}



Table auth_requests [headercolor: #00FFFF] {
  _id uuid [pk, default: `gen_random_uuid()`] // Llave primaria generada automáticamente
  key varchar [not null] // Clave asociada a la solicitud
  type RequestType_Enum [not null] // Tipo de solicitud (confirmación de cuenta, restablecer contraseña, etc.)
  status RequestStatus_Enum [not null, default: 'PENDING'] // Estado de la solicitud
  detail varchar // Detalles adicionales de la solicitud, opcional
  created_at timestamp [not null] // Fecha de creación de la solicitud
  used_at timestamp // Fecha en que se utilizó la solicitud, opcional
  auth_id uuid [not null] // Relación con la tabla de autenticación

  Note: 'Tabla de solicitudes de autenticación (confirmación de cuenta, restablecimiento de contraseña, etc.).'
}

Enum RequestType_Enum {
  CONFIRM_ACCOUNT
  RESET_PASSWORD
  CHANGE_EMAIL
}

Enum RequestStatus_Enum {
  PENDING
  USED
  EXPIRED
}


Ref: "auth"."_id" < "auth_requests"."auth_id"

  Table user {
  _id uuid [pk, default: `gen_random_uuid()`] // Llave primaria generada automáticamente
  name varchar [not null] // Nombre del usuario
  last_name varchar [not null] // Apellido del usuario
  gender Gender_Enum [default: 'NONE'] // Género del usuario
  phone varchar // Número de teléfono del usuario, opcional
  direction jsonb // Dirección del usuario, almacenada en formato JSONB
  auth varchar [unique, not null] // Relación con la tabla de autenticación
  profile varchar [unique, not null] // Relación con la tabla de perfil
  hiring_data_id uuid // Relación con la tabla de datos de contratación
  updated_at timestamp [not null] // Fecha de última actualización del usuario

  Note: 'Tabla de información de usuarios.'
}

Enum Gender_Enum {
  MALE
  FEMALE
  NONE
}



Ref: "user"."auth" - "auth"."_id"
Ref: "auth"."user" - "user"."_id"